fixed issue with tags being too close

--- a/app/static/style.css
+++ b/app/static/style.css
@@ -3,17 +3,29 @@ body {
     padding-top: 20px;
 }
 
-body.center {
-	text-align: center;
-}
-
 div.gallery img {
     width: 100%;
     height: auto
 }
 
+div.artwork {
+    width: 70%;
+}
+
 * {
     box-sizing: border-box;
+}
+
+img.artwork {
+    width: 80%;
+}
+
+img.large-centered {
+    width: 65%;
+}
+
+a {
+    padding-right: 10px;
 }
 
 .series-large {
@@ -26,20 +38,12 @@ div.gallery img {
     width: 50%;
 }
 
-img.artwork {
-    width: 80%;
+.center {
+    text-align: center;
 }
 
-div.artwork {
-    width: 70%;
-}
-
-p.back {
+.back {
     text-align: left;
-}
-
-img.large-centered {
-    width: 65%;
 }
 
 @media only screen and (max-width: 500px){
